<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView android:text="@string/app_name" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv1" android:textSize="20sp" android:gravity="center" android:layout_margin="10dp" />

    <Button android:text="@string/kor_word_setting" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/setWord" android:textSize="20sp" android:onClick="ondialogbtnClicked1" />

    <Button android:text="@string/kor_start" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/bVoice" android:textSize="20sp" />

    <Button android:text="@string/kor_terminate" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/bStop" android:textSize="20sp" />

    <Button android:text="@string/kor_guide" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/bInfo" android:textSize="20sp"  android:onClick="ondialogbtnClicked2" />

    <Button android:text="@string/kor_display" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/bText" android:textSize="20sp" />

    <Chronometer
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/chronometer1"
        android:layout_gravity="center_horizontal" android:gravity="center" android:textSize="30sp" android:textIsSelectable="false" />

    <TextView android:text="" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/resultString" android:textSize="15sp" android:gravity="center" />


</LinearLayout>