<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView android:text="@string/app_name" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv1" android:textSize="20sp" android:gravity="center"  />

    <TextView android:text="@string/introduction" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv2" android:textSize="12sp" android:layout_margin="18dp" />

    <Button android:text="@string/kor_lang" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/button1" android:textSize="20sp"  />

    <Button android:text="@string/eng_lang" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/button2" android:textSize="20sp" />

    <Button android:text="@string/homepage_link" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/button3" android:textSize="20sp" />

    <Button android:text="@string/version_info" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/button4" android:textSize="20sp" android:onClick="ondialogbtnClicked"  />

    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp"
        android:id="@+id/img1" android:src="@drawable/brain_head" android:layout_gravity="center_horizontal" />
</LinearLayout>
