<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".AhCountingResult">

    <TextView android:text="@string/app_name" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/tv1" android:textSize="20sp" android:gravity="center" android:layout_margin="10dp" />

    <Button android:text="@string/show_result" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/dbbutton" android:textSize="18sp" android:onClick="clickShowDB" />

    <Button android:text="@string/initialize" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/restore" android:textSize="18sp" android:onClick="restoreDB"  />

    <Button android:text="@string/kor_restart" android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/moveToKr" android:textSize="18sp" />

    @<Button android:text="@string/eng_restart" android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/moveToEn" android:textSize="18sp" />

</LinearLayout>